@@ -126,4 +126,4 @@ $autoload['language'] = array();
 |
 |	$autoload['model'] = array('first_model' => 'first');
 */
-$autoload['model'] = array('stocks', 'players', 'transactions', 'movements', 'bsx');
+$autoload['model'] = array('stocks', 'players', 'register', 'transactions', 'movements', 'bsx');
