@@ -1,0 +1,18 @@
+<?php
+
+/*
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
+ */
+
+/**
+ * Description of Register
+ *
+ * @author Austin
+ */
+class Register extends Base_Model {
+    function __construct() {
+        parent::__construct();
+    }
+}
