@@ -1,0 +1,11 @@
+<div>
+    <form name="registeruser" action="registercontroller/validate" method="post">
+        User name:<br>
+        <input type="text" name="name">
+        <br>
+        Password:<br>
+        <input type="text" name="password">
+        <br>
+        <input type="submit" value="Submit">
+    </form>
+</div>
