@@ -33,3 +33,4 @@ Cameron Stenmark                Acknowledged
 2/14/2016   Added Player holdings table - Austin 
 2/14/2016   Added Player activity table and total player equity field - Austin
 2/14/2016   Added Equity field to player panel of dashboard - Austin
+4/14/2016   Added Beginnings of user Registration - Austin 
